nucleo-picker-vt/tests/scenarios/snapshots/scenarios__preview__error_labels@width-11.snap
---
source: nucleo-picker-vt/tests/scenarios/preview.rs
expression: sr.checkpoint(resolved_name.to_owned())?
info:
  resolved_name: width-11
  name_expression: "format!(\"width-{width}\")"
  sequence: 14
---
version: 1
size:
  cols: 22
  rows: 3
screen: alternate
cursor:
  position:
    x: 2
    y: 2
  visible: true
  shape: block
  blinking: false
  pending_wrap: false
  at_wide_tail: false
  password_input: false
colors:
  foreground: "#ffffff"
  background: "#000000"
  cursor: ~
text:
  - ▌ error    ╭─ Error ─╮
  - "  1/1 ─────│         │"
  - ">          ╰─────────╯"
styles:
  - row: 0
    start: 0
    end: 1
    foreground: "#c397d8"
    background: "#666666"
    bold: true
  - row: 0
    start: 1
    end: 7
    background: "#666666"
    bold: true
  - row: 0
    start: 11
    end: 22
    foreground: "#cc6666"
  - row: 1
    start: 0
    end: 5
    foreground: "#b9ca4a"
    italic: true
  - row: 1
    start: 5
    end: 11
    foreground: "#c5c8c6"
    italic: true
  - row: 1
    start: 11
    end: 12
    foreground: "#cc6666"
  - row: 1
    start: 21
    end: 22
    foreground: "#cc6666"
  - row: 2
    start: 11
    end: 22
    foreground: "#cc6666"
