nucleo-picker-vt/tests/scenarios/snapshots/scenarios__preview__error_labels@width-7.snap
---
source: nucleo-picker-vt/tests/scenarios/preview.rs
expression: sr.checkpoint(resolved_name.to_owned())?
info:
  resolved_name: width-7
  name_expression: "format!(\"width-{width}\")"
  sequence: 6
---
version: 1
size:
  cols: 14
  rows: 3
screen: alternate
cursor:
  position:
    x: 2
    y: 2
  visible: true
  shape: block
  blinking: false
  pending_wrap: false
  at_wide_tail: false
  password_input: false
colors:
  foreground: "#ffffff"
  background: "#000000"
  cursor: ~
text:
  - ▌ error╭ Err ╮
  - "  1/1 ─│     │"
  - ">      ╰─────╯"
styles:
  - row: 0
    start: 0
    end: 1
    foreground: "#c397d8"
    background: "#666666"
    bold: true
  - row: 0
    start: 1
    end: 7
    background: "#666666"
    bold: true
  - row: 0
    start: 7
    end: 14
    foreground: "#cc6666"
  - row: 1
    start: 0
    end: 5
    foreground: "#b9ca4a"
    italic: true
  - row: 1
    start: 5
    end: 7
    foreground: "#c5c8c6"
    italic: true
  - row: 1
    start: 7
    end: 8
    foreground: "#cc6666"
  - row: 1
    start: 13
    end: 14
    foreground: "#cc6666"
  - row: 2
    start: 7
    end: 14
    foreground: "#cc6666"
