nucleo-picker-vt/tests/scenarios/snapshots/scenarios__preview__error_labels@width-9.snap
---
source: nucleo-picker-vt/tests/scenarios/preview.rs
expression: sr.checkpoint(resolved_name.to_owned())?
info:
  resolved_name: width-9
  name_expression: "format!(\"width-{width}\")"
  sequence: 10
---
version: 1
size:
  cols: 18
  rows: 3
screen: alternate
cursor:
  position:
    x: 2
    y: 2
  visible: true
  shape: block
  blinking: false
  pending_wrap: false
  at_wide_tail: false
  password_input: false
colors:
  foreground: "#ffffff"
  background: "#000000"
  cursor: ~
text:
  - ▌ error  ╭ Error ╮
  - "  1/1 ───│       │"
  - ">        ╰───────╯"
styles:
  - row: 0
    start: 0
    end: 1
    foreground: "#c397d8"
    background: "#666666"
    bold: true
  - row: 0
    start: 1
    end: 7
    background: "#666666"
    bold: true
  - row: 0
    start: 9
    end: 18
    foreground: "#cc6666"
  - row: 1
    start: 0
    end: 5
    foreground: "#b9ca4a"
    italic: true
  - row: 1
    start: 5
    end: 9
    foreground: "#c5c8c6"
    italic: true
  - row: 1
    start: 9
    end: 10
    foreground: "#cc6666"
  - row: 1
    start: 17
    end: 18
    foreground: "#cc6666"
  - row: 2
    start: 9
    end: 18
    foreground: "#cc6666"
