nucleo-picker-vt/tests/scenarios/snapshots/scenarios__preview__horizontal_scroll@restored.snap
---
source: nucleo-picker-vt/tests/scenarios/preview.rs
expression: sr.checkpoint(resolved_name.to_owned())?
info:
  resolved_name: restored
  name_expression: "\"restored\""
  sequence: 13
---
version: 1
size:
  cols: 24
  rows: 5
screen: alternate
cursor:
  position:
    x: 6
    y: 4
  visible: true
  shape: block
  blinking: false
  pending_wrap: false
  at_wide_tail: false
  password_input: false
colors:
  foreground: "#ffffff"
  background: "#000000"
  cursor: ~
text:
  - "            ╭──────────╮"
  - "            │1 …jklmnop│"
  - ▌ long      │2 …       │
  - "  1/2 ──────│3         │"
  - "> long      ╰──────────╯"
styles:
  - row: 1
    start: 13
    end: 14
    background: "#1d1f21"
  - row: 2
    start: 0
    end: 1
    foreground: "#c397d8"
    background: "#666666"
    bold: true
  - row: 2
    start: 1
    end: 2
    background: "#666666"
    bold: true
  - row: 2
    start: 2
    end: 6
    foreground: "#70c0b1"
    background: "#666666"
    bold: true
  - row: 2
    start: 13
    end: 14
    background: "#1d1f21"
  - row: 3
    start: 0
    end: 5
    foreground: "#b9ca4a"
    italic: true
  - row: 3
    start: 5
    end: 12
    foreground: "#c5c8c6"
    italic: true
  - row: 3
    start: 13
    end: 14
    background: "#1d1f21"
