nucleo-picker-vt/tests/scenarios/snapshots/scenarios__preview__horizontal_unicode@styled.snap
---
source: nucleo-picker-vt/tests/scenarios/preview.rs
expression: sr.checkpoint(resolved_name.to_owned())?
info:
  resolved_name: styled
  name_expression: "\"styled\""
  sequence: 5
---
version: 1
size:
  cols: 18
  rows: 6
screen: alternate
cursor:
  position:
    x: 2
    y: 5
  visible: true
  shape: block
  blinking: false
  pending_wrap: false
  at_wide_tail: false
  password_input: false
colors:
  foreground: "#ffffff"
  background: "#000000"
  cursor: ~
text:
  - "         ╭───────╮"
  - "         │1 ~界c~│"
  - "         │2 ~~bc~│"
  - ▌ item   │3 ~bcd~│
  - "  1/1 ───│4 ~    │"
  - ">        ╰───────╯"
styles:
  - row: 1
    start: 10
    end: 11
    background: "#1d1f21"
  - row: 1
    start: 13
    end: 16
    foreground: "#b9ca4a"
    bold: true
  - row: 2
    start: 10
    end: 11
    background: "#1d1f21"
  - row: 2
    start: 14
    end: 16
    foreground: "#d54e53"
    underline: single
  - row: 3
    start: 0
    end: 1
    foreground: "#c397d8"
    background: "#666666"
    bold: true
  - row: 3
    start: 1
    end: 6
    background: "#666666"
    bold: true
  - row: 3
    start: 10
    end: 11
    background: "#1d1f21"
  - row: 4
    start: 0
    end: 5
    foreground: "#b9ca4a"
    italic: true
  - row: 4
    start: 5
    end: 9
    foreground: "#c5c8c6"
    italic: true
  - row: 4
    start: 10
    end: 11
    background: "#1d1f21"
