nucleo-picker-vt/tests/scenarios/snapshots/scenarios__preview__numbered_scrolling_and_blank_rows@bottom.snap
---
source: nucleo-picker-vt/tests/scenarios/preview.rs
expression: sr.checkpoint(resolved_name.to_owned())?
info:
  resolved_name: bottom
  name_expression: "\"bottom\""
  sequence: 6
---
version: 1
size:
  cols: 26
  rows: 6
screen: alternate
cursor:
  position:
    x: 2
    y: 5
  visible: true
  shape: block
  blinking: false
  pending_wrap: false
  at_wide_tail: false
  password_input: false
colors:
  foreground: "#ffffff"
  background: "#000000"
  cursor: ~
text:
  - "             ╭───────────╮"
  - "  empty      │ 97 text   │"
  - "  short      │ 98 text   │"
  - ▌ long       │ 99 text   │
  - "  3/3 ───────│100 text   │"
  - ">            ╰───────────╯"
styles:
  - row: 1
    start: 14
    end: 18
    background: "#666666"
  - row: 2
    start: 14
    end: 18
    background: "#666666"
  - row: 3
    start: 0
    end: 1
    foreground: "#c397d8"
    background: "#666666"
    bold: true
  - row: 3
    start: 1
    end: 6
    background: "#666666"
    bold: true
  - row: 3
    start: 14
    end: 18
    background: "#666666"
  - row: 4
    start: 0
    end: 5
    foreground: "#b9ca4a"
    italic: true
  - row: 4
    start: 5
    end: 13
    foreground: "#c5c8c6"
    italic: true
  - row: 4
    start: 14
    end: 18
    background: "#666666"
